FIX - mobile homonym toggle overflow styles

--- a/wordweb-app/src/main/resources/scss/_homonym.scss
+++ b/wordweb-app/src/main/resources/scss/_homonym.scss
@@ -117,6 +117,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    overflow: hidden;
   }
 }
 
